added worker thread

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-    <head></head>
+    <head>
+        <script src='animate.js'></script>
+        <script src='emulator.js'></script>
+    </head>
     <body>
         <canvas id="myCanvas" width="200" height="200">
             <p>Your browser does not support html5!</p>
