--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <script src='animate.js'></script>
-        <script src='emulator.js'></script>
+        <script src='js/animate.js'></script>
+        <script src='js/emulator.js'></script>
     </head>
     <body>
         <canvas id="myCanvas" width="200" height="200">
