Changed emulator into a simple snake game

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <script src='js/emulator.js'></script>
     </head>
     <body>
-        <canvas id="myCanvas" width="200" height="200">
+        <canvas id="myCanvas" width="400" height="400" style="border-style: solid; border-width: 1;">
             <p>Your browser does not support html5!</p>
         </canvas>    
     </body>
