implemented more opcodes and hooked up rendering

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
     <head>
         <script src='js/animate.js'></script>
         <script src='js/emulator.js'></script>
+        <script src='js/fileHelper.js'></script>
     </head>
     <body>
-        <canvas id="myCanvas" width="400" height="400" style="border-style: solid; border-width: 1;">
+        <canvas id="myCanvas" width="512" height="256" style="border-style: solid; border-width: 1;">
             <p>Your browser does not support html5!</p>
         </canvas>    
+        <input type="file" id="files" name="file" />
+        <output id="fileName"></output>
     </body>
 </html>
