added color changing ability

--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
                     </canvas>    
                 </div>
                 <div class="row">
-                    <div class="offset3 span2" style="font-family: monospace;">
+                    <div class="offset3 span3">
+                        <div class="input-append">
+                            <input class="span1" id="txtColorOn" size="3" type="text" value="FFF"><button class="btn" type="button" onclick="changeOn()">Change + color</button>
+                        </div>
+                    </div>
+                    <div class="span3">
+                        <div class="input-append">
+                            <input class="span1" id="txtColorOff" size="3" type="text" value="000"><button class="btn" type="button" onclick="changeOff()">Change - color</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="offset3 span3" style="font-family: monospace;">
                         <p>Keypad:</p>
                         +---+---+---+---+<br />
                         | 1 | 2 | 3 | 4 |<br />
