added ability to change timeout

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </canvas>    
                 </div>
                 <div class="row">
-                    <div class="offset3 span3">
+                    <div class="offset2 span3">
                         <div class="input-append">
                             <input class="span1" id="txtColorOn" size="3" type="text" value="FFF"><button class="btn" type="button" onclick="changeOn()">Change + color</button>
                         </div>
@@ -30,7 +30,13 @@
                             <input class="span1" id="txtColorOff" size="3" type="text" value="000"><button class="btn" type="button" onclick="changeOff()">Change - color</button>
                         </div>
                     </div>
+                    <div class="span3">
+                        <div class="input-append">
+                            <input class="span1" id="txtTimeout" size="3" type="text" value="0"><button class="btn" type="button" onclick="changeTimeout()">Change Timeout</button>
+                        </div>
+                    </div>
                 </div>
+                <br />
                 <div class="row">
                     <div class="offset3 span3" style="font-family: monospace;">
                         <p>Keypad:</p>
