Implemented preloaded ROMs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src='js/animate.js'></script>
         <script src='js/emulator.js'></script>
         <script src='js/fileHelper.js'></script>
+        <script src='js/roms.js'></script>
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
@@ -58,6 +59,7 @@
                     </div>
                     <div class="span4">
                         <input type="file" id="files" name="file" />
+                        <select id="games"></select>
                     </div>
                 </div>
             </div>
