--- a/index.html
+++ b/index.html
@@ -34,6 +34,40 @@
                         <div style="height: 50px;">
                             <button id="enableConsole" class="btn btn-info" type="button" onclick="enableConsole()">Enable Console</button>
                         </div>
+                        <div id="registers" class="row">
+                            <div id="V0" class="span2">
+                            </div>
+                            <div id="V1" class="span2">
+                            </div>
+                            <div id="V2" class="span2">
+                            </div>
+                            <div id="V3" class="span2">
+                            </div>
+                            <div id="V4" class="span2">
+                            </div>
+                            <div id="V5" class="span2">
+                            </div>
+                            <div id="V6" class="span2">
+                            </div>
+                            <div id="V7" class="span2">
+                            </div>
+                            <div id="V8" class="span2">
+                            </div>
+                            <div id="V9" class="span2">
+                            </div>
+                            <div id="VA" class="span2">
+                            </div>
+                            <div id="VB" class="span2">
+                            </div>
+                            <div id="VC" class="span2">
+                            </div>
+                            <div id="VD" class="span2">
+                            </div>
+                            <div id="VE" class="span2">
+                            </div>
+                            <div id="VF" class="span2">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <br />
