Loaded display.js in index.html Float style bugfix

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src='js/emulator.js'></script>
         <script src='js/fileHelper.js'></script>
         <script src='js/roms.js'></script>
+        <script src='js/display.js'></script>
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
