--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
             </div>
             <br />
             <div class="container well">
-                <div class="center">
-                    <canvas class="screen" id="myCanvas" width="768" height="384">
-                        <p>Your browser does not support html5!</p>
-                    </canvas>    
-                </div>
+                <div class="canvasWidth centered screen" id="viewport"></div>
                 <br />
                 <div class="canvasWidth center centered accordion alert alert-info" id="accordion">
                     <div class="accordion-heading">
