--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+        <script src='js/utils.js'></script>
         <script src='js/jquery.js'></script>
         <script src='js/bootstrap.js'></script>
         <script src='js/bootstrap-transitions.js'></script>
